fix(charts): set mix-blend-mode for better color contrast (#2239)

--- a/src/patternfly/patternfly-charts.scss
+++ b/src/patternfly/patternfly-charts.scss
@@ -2,6 +2,13 @@
 
 /* stylelint-disable */
 
+.pf-c-chart {
+  // Color blending mode
+  svg g[clip-path] {
+    mix-blend-mode: multiply;
+  }
+}
+
 :root {
   // Chart colors
 
